fixed some alignment issues on scaling

--- a/style.css
+++ b/style.css
@@ -2128,7 +2128,7 @@ mejs-controls .mejs-time-rail .mejs-time-loaded {
   z-index: 1;
 }
 .td-post-header {
-  max-width: 1000px;
+  max-width: 1058px;
   padding-top: 50px; 
   bottom: 0;
 }
@@ -2149,6 +2149,9 @@ mejs-controls .mejs-time-rail .mejs-time-loaded {
   height: 300px;
   width: auto;
 } 
+.td-post-date {
+  margin-left: 0px !important;
+}
 @media only screen and (max-width: 1025px) {
   .podcast-title-section-container {
       flex-direction: column-reverse;
